--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <span>NOV</span>
         <span>DEC</span>
     </div>
-    <footer>@fraidy.dev</footer>
+    <footer>@sujith.dev</footer>
 <script src="app.js"></script>
 </body>
 </html>
